# src/dtos/charge/create.invoice.dto.ts
@@ -1,0 +1,18 @@
+import { IsEmail, IsNotEmpty } from 'class-validator';
+
+export class CreateInvoiceDTO {
+  public name: string;
+  public memo: string;
+
+  @IsEmail()
+  public email: string;
+
+  @IsNotEmpty()
+  public currencyType: string;
+
+  @IsNotEmpty()
+  public currency: string;
+
+  @IsNotEmpty()
+  public amount: Number;
+}
