# src/routes/user.route.ts
@@ -4,6 +4,7 @@ import { ActiveUserDTO } from '@/dtos/user/active.user.dto';
 import { LoginUserDTO } from '@/dtos/user/login.user.dto';
 import { RegisterUserDTO } from '@/dtos/user/register.user.dto';
 import { ResendEmailDTO } from '@/dtos/user/resend.email.dto';
+import { SetupCurrencyDTO } from '@/dtos/user/setup.currency.dto';
 import { SetupWalletDTO } from '@/dtos/user/setup.wallet.dto';
 import authMiddleware from '@/middlewares/auth.middleware';
 import validationMiddleware from '@/middlewares/validation.middleware';
@@ -28,6 +29,7 @@ class UserRoute implements Routes {
     this.router.get(`${this.path}/generate-qr`, authMiddleware, this.userController.generateQR);
     this.router.put(`${this.path}/enable-2fa`, authMiddleware, validationMiddleware(Enable2FaDTO, 'body'), this.userController.enable2Fa);
     this.router.put(`${this.path}/setup-wallet`, authMiddleware, validationMiddleware(SetupWalletDTO, 'body'), this.userController.setupWallet);
+    this.router.put(`${this.path}/setup-currency`, authMiddleware, validationMiddleware(SetupCurrencyDTO, 'body'), this.userController.setupCurrency);
   }
 }
 
